[FIXED]The tooltip of the Mask Aligner has been fixed. The input should be from bottom layer and the output otherwise.
[FIXED]The tooltip of the Large Molecular Scanner has been fixed. The structure should not be filled with air.
[FIXED]The tooltip of the Industrial Coke Oven.
[FIXED]Same crafting recipes for Industrial Coke Oven and Large Roasting Oven main blocks.
[FIXED]Partcile Collider construction now is possible.
[CHANGED]Now Industrial Coke Oven, Large Roasting Oven, and Large Dyers can input and output fluids or items at any walls.
[CHANGED]Aligner Units and Mask Aligner crafting recipes.
[CHANGED]Now Circuit Wiring (Platinum) are made in Mask Aligner.
[CHANGED]Now Fluid Solidifiers accept CU instead of EU.
[CHANGED]Some recipes are now processed in heat mixers instead of mixers.
[ADDED]Heat Mixers (T1-T5)
[ADDED]Laser Cutters (T1-T5)
[WIP]Polytetrafluoroethylene drums and pipes.

6.13.06:
[CHANGED]You can no longer Put dust into Extruder
[CHANGED]Assembler-Circuit Assembler.It should be different from Welder
[ADDED]More organic fluids
Dichloroisopropanol
Cumene
Silane
Allyl Chloride
Acrylic Acid
Ethyl Acrylate
Styrene
Vinyl Chloride
Ethyne
Photoresist
[ADDED]
Mask Aligner. A more powerful and precise machine to align nano-scale patterns on wafers.
Built from Stainless Steel Walls and Aligner Units, its purpose will be added in the future.
[ADDED]Aligner Units used to build Mask Aligner

6.13.05:
[FIXED]Some Recipe conflict
[ADDED]Process of Isoprene, which produces Rubber chemically.

6.13.04: 
[FIXED]DistillationTower does not output lubricant.
[FIXED]DistillationTower recipe does not have recipe output Gasoil With Sulfur
[CHANGED]Copper and Cassiterite now can Worldgen in Stone Layer.
[CHANGED]Particle Collider now needs minimum 20 particle in the input slot to operate.
[CHANGED]Some recipes of the Particle Collider to adjust the previous change.
[ADDED]IV Battery(8192EU/t)
[ADDED]Electrical Proof Machine Casing.