@@ -1258,7 +1258,13 @@ public class MT {
 	H3PO4                   = lqudaciddcmp  (27001, "Phosphoric Acid"       , SET_FLUID             , 255, 255,  61, 255).put(LIQUID)                                                                                                                                   .uumMcfg( 0, H              , 3*U, P                , 1*U, O                , 4*U)                                                                          .heat( 200,  400), PhosphoricAcid = H3PO4,
 	Naphtha                 = create        (27003, "Naphtha"               , SET_FLUID             , 255, 255, 102, 255).put(LIQUID, EXPLOSIVE, FLAMMABLE)                                                                                                                                                                                                                                                                         .heat( 100,  400).aspects(TC.MORTUUS, 1, TC.POTENTIA, 1),
     H_Ion                   = create        (27004, "Ionized Hydrogen", SET_FLUID, 255, 255, 102, 255).put(PLASMA).heat(1, 12),
-    He_Ion                  = create        (27005, "Ionized Helium", SET_FLUID, 255, 255, 102, 255).put(PLASMA).heat(2, 8);
+    He_Ion                  = create        (27005, "Ionized Helium", SET_FLUID, 255, 255, 102, 255).put(PLASMA).heat(2, 8),
+    PTFE                    = create        (27006, "Polytetrafluoroethylene"               , SET_DULL              , 79, 79, 79, 155).put(G_INGOT_MACHINE, APPROXIMATE, FLAMMABLE, EXTRUDER, EXTRUDER_SIMPLE, WIRES, MORTAR, BOUNCY, BRITTLE, FURNACE)                      .uumMcfg( 0, C              , 2*U, F                , 4*U)                                                                                                  .aspects(TC.MOTUS, 2).heat(423).setBurning(Ash, U9).setSmelting(null, 2*U3).qual(1, 3.0, 32, 1),
+    PE                      = create        (27007, "Polyethylene"               , SET_DULL              , 200, 200, 200, 255).put(G_INGOT_MACHINE, APPROXIMATE, FLAMMABLE, EXTRUDER, EXTRUDER_SIMPLE, WIRES, MORTAR, BOUNCY, BRITTLE, FURNACE)                      .uumMcfg( 0, C              , 1*U, H                , 2*U)                                                                                                  .aspects(TC.MOTUS, 2).heat(423).setBurning(Ash, U9).setSmelting(null, 2*U3).qual(1, 3.0, 32, 1),
+    PVC                     = create        (27008, "Polyvinylchloride"               , SET_DULL              , 144, 238, 144, 255).put(G_INGOT_MACHINE, APPROXIMATE, FLAMMABLE, EXTRUDER, EXTRUDER_SIMPLE, WIRES, MORTAR, BOUNCY, BRITTLE, FURNACE)                      .uumMcfg( 0, C              , 2*U, H                , 3*U, Cl, 1*U)                                                                                                  .aspects(TC.MOTUS, 2).heat(600).setBurning(Ash, U9).setSmelting(null, 2*U3).qual(1, 3.0, 32, 1),
+    Epoxid                  = create        (27009, "Epoxid"               , SET_DULL              , 192, 255, 62, 255).put(G_INGOT_MACHINE, APPROXIMATE, FLAMMABLE, EXTRUDER, EXTRUDER_SIMPLE, WIRES, MORTAR, BOUNCY, BRITTLE, FURNACE)                      .uumMcfg( 0, C              , 11*U, H                , 12*U, O, 3*U)                                                                                                  .aspects(TC.MOTUS, 2).heat(423).setBurning(Ash, U9).setSmelting(null, 2*U3).qual(1, 3.0, 32, 1);
+
+
 
     static {
 		H2O.setSolidifying(Ice, U);
